A bit ugly hack to make it compile better.

BUG: 140189

Tobias, any better solution than the previous situation?
CCMAIL: tokoe@kde.org

svn path=/trunk/playground/graphics/okular/; revision=624631